<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".view.dialog.InsertDialogFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/iv_close"
            android:layout_toRightOf="@+id/iv_close"
            android:gravity="right"
            android:text="@string/new_cost"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/close_title"
            android:src="@drawable/ic_close_red_700_36dp" />
    </RelativeLayout>


    <EditText
        android:id="@+id/et_insertdate"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:hint="@string/date_title"
        android:inputType="none"
        android:lines="1" />

    <EditText
        android:id="@+id/et_subject"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:hint="@string/subject_title"
        android:inputType="text"
        android:lines="1" />

    <EditText
        android:id="@+id/et_cost"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:hint="@string/cost_title"
        android:inputType="numberDecimal"
        android:lines="1" />

    <RelativeLayout
        android:id="@+id/ll_buttons"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/btn_delete"
            style="@style/Base.Widget.AppCompat.ButtonBar.AlertDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/btn_insert"
            android:layout_toLeftOf="@+id/btn_insert"
            android:background="?attr/selectableItemBackground"
            android:text="@string/delete_title"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="17sp" />

        <Button
            android:id="@+id/btn_insert"
            style="@style/Base.Widget.AppCompat.ButtonBar.AlertDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="?attr/selectableItemBackground"
            android:text="@string/insert"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="17sp" />

    </RelativeLayout>


</LinearLayout>